@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<!-- This file is part of Coog. The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<data>
+    <xpath expr="/tree/field[@name='direct_debit_account']" position="after">
+        <field name="sepa_mandate"/>
+    </xpath>
+</data>
