@@ -1,3 +1,4 @@
+* BUG#6902 Corrige l'avenant de changements de quittancement sur un contrat sans payeur
 * BUG#6862 Corrige la recherche des contrats et des mandats en cas d'amendement de mandat SEPA
 
 Version 1.12 - 2017-04-28
