@@ -1,3 +1,4 @@
+* BUG#6902 Fix billing information endorsement with no payer
 * BUG#6862 Fix search for contracts and mandates when amending SEPA mandate
 
 Version 1.12 - 2017-04-28
